--- a/src/icon/iconfont.css
+++ b/src/icon/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4177535 */
-  src: url('iconfont.woff2?t=1689916464764') format('woff2'),
-       url('iconfont.woff?t=1689916464764') format('woff'),
-       url('iconfont.ttf?t=1689916464764') format('truetype');
+  src: url('iconfont.woff2?t=1690350369584') format('woff2'),
+       url('iconfont.woff?t=1690350369584') format('woff'),
+       url('iconfont.ttf?t=1690350369584') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-google:before {
+  content: "\e87a";
 }
 
 .icon-link:before {
